# plot-digitizer

./: .gitignore  AGENTS.md  BANDSTRUCTURE_DIGITIZER_GUIDE.md  README.md  digitizer.py  flake.nix  pyproject.toml  result  start.sh
.github/workflows/: copilot-setup-steps.yml  nix-ci.yml
digitized-output/csv/: tmp5k61zmf3.csv  tmp5k61zmf3.replot.csv
digitized-output/images/: tmp5k61zmf3.metadata.json
digitized-output/labels/: tmp5k61zmf3.txt
hyps/: curriculum_stage1.yml  curriculum_stage3.yml  hyp_continue_shift_fix.yaml
runs/: curriculum_stage1.yml  curriculum_stage2.yml  curriculum_stage3.yml  curriculum_stage4.yml  custom_yolo11s-seg-interpret.yaml  hyp_plot_recall.yaml
scripts/: convert_manual_annotations.py  yolo_diagnostics.py
src/digitizer/: __init__.py  __main__.py  ai_segmentation.py  annotation_io.py  axis_parsing.py  calibration.py  cli_support.py  constants.py  curve_utils.py  cv_segmentation.py  digitize_workflow.py  image_ops.py  interactive_annotator.py  interactive_axis.py  math_utils.py  model_wrapper.py  models.py  parser.py  plotting.py  points.py  synth_annotations.py  synth_curve_plotting.py  synth_curves.py  synth_dataset.py  synth_degrade.py  synth_example.py  synth_output.py  synth_render.py  synthetic.py  training.py  validation.py
src/digitizer/layers/: __init__.py  interpretation.py  loss.py  style_utils.py
src/digitizer/synth/: __init__.py  annotations.py  curve_plotting.py  (+6 more)
synthetic-data/: dataset.yaml
synthetic-data/ground_truth/: plot_0000.csv
synthetic-data/images/: plot_0000.metadata.json
synthetic-data/labels/: plot_0000.txt
tests/: test_digitizer.py  test_interpretation_layer.py
(+1 files in other folders)
