[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digitizer"
version = "0.1.0"
description = "Automatic plot digitizer CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "opencv-python>=4.10",
    "pandas>=2.2",
    "scikit-image>=0.24",
    "scipy>=1.13",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
ai = [
    "ultralytics>=8.3",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
digitizer = "digitizer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/digitizer"]

[tool.hatch.build.targets.sdist]
include = ["src/digitizer", "README.md", "LICENSE"]
